# spectral-lib-cleaning

./: .gitignore  LICENSE  README.md  download_and_merge_data.py  main.py  pyproject.toml
src/spectral_lib_cleaning/: clean.py  cli.py  config.py  definitions.py  download_data.py  io.py  urls.py
src/spectral_lib_cleaning/data/: download.py
src/spectral_lib_cleaning/postprocess/: publish.py
